# ed25519

./: .gitignore  CMakeLists.txt  README.md
include/ed25519/: compat.h  ed25519.h  export.h  sha512.h
src/: add_scalar.c  compat.c  ed25519.h  ed25519_libsodium_compat.c  ed25519_libsodium_compat.h  export.h  fe.c  fe.h  fixedint.h  ge.c  key_exchange.c  keypair.c  precomp_data.h  sc.c  sc.h  seed.c  sha512.c  sign.c  verify.c
tests/: sodiumtest.c  test.c
